<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>jaxen</groupId>
  <artifactId>jaxen-parent</artifactId>
  <packaging>pom</packaging>
  <name>Jaxen</name>
  <version>2.0.0</version>
  <description>Jaxen is a universal XPath 1.0 engine for Java.</description>
  <url>http://www.cafeconleche.org/jaxen</url>
  <licenses>
    <license>
      <name>BSD License 2.0</name>
      <url>https://raw.githubusercontent.com/jaxen-xpath/jaxen/master/LICENSE.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <issueManagement>
    <url>https://github.com/jaxen-xpath/jaxen/issues</url>
  </issueManagement>
  <inceptionYear>2001</inceptionYear>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.felix.version>2.3.7</project.felix.version>
    <project.javadoc.version>3.5.0</project.javadoc.version>
    <maven.compiler.source>1.5</maven.compiler.source>
    <maven.compiler.target>1.5</maven.compiler.target>
  </properties>

  <modules>
    <module>core</module>
    <module>integration-tests</module>
  </modules>

  <mailingLists>
    <mailingList>
      <name>Jaxen Users List</name>
      <archive>https://markmail.org/search/?q=list%3Aorg.codehaus.jaxen.user</archive>
    </mailingList>
    <mailingList>
      <name>Jaxen Developers List</name>
      <archive>https://markmail.org/search/?q=list%3Aorg.codehaus.jaxen.dev</archive>
    </mailingList>
  </mailingLists>

  <developers>
    <developer>
      <id>bob</id>
      <name>Bob McWhirter</name>
      <organization>The Werken Company</organization>
    </developer>
    <developer>
      <id>jstrachan</id>
      <name>James Strachan</name>
      <email>james_strachan@yahoo.co.uk</email>
      <organization>Spiritsoft</organization>
    </developer>
    <developer>
      <id>dmegginson</id>
      <name>David Megginson</name>
      <email>contact@megginson.com</email>
      <organization>Megginson Technologies</organization>
    </developer>
    <developer>
      <id>eboldwidt</id>
      <name>Erwin Bolwidt</name>
      <email>erwin@klomp.org</email>
    </developer>
    <developer>
      <id>mbelonga</id>
      <name>Mark A. Belonga</name>
      <email>mbelonga@users.sourceforge.net</email>
    </developer>
    <developer>
      <id>cnentwich</id>
      <name>Christian Nentwich</name>
      <email>xcut@users.sourceforge.net</email>
    </developer>
    <developer>
      <id>purpletech</id>
      <name>Alexander Day Chaffee</name>
      <email>purpletech@users.sourceforge.net</email>
      <organization>Purple Technologies</organization>
    </developer>
    <developer>
      <id>jdvorak</id>
      <name>Jan Dvorak</name>
      <email>jdvorak@users.sourceforge.net</email>
    </developer>
    <developer>
      <id>szegedia</id>
      <name>Attila Szegedi</name>
      <email>szegedia@users.sourceforge.net</email>
    </developer>
    <developer>
      <id>proyal</id>
      <name>Peter Royal</name>
      <email>peter.royal@pobox.com</email>
      <url>http://fotap.org/~osi</url>
    </developer>
    <developer>
      <id>ssanders</id>
      <name>Scott Sanders</name>
      <organization>dotnot</organization>
    </developer>
    <developer>
      <id>bewins</id>
      <name>Brian Ewins</name>
      <email>brian.ewins@gmail.com</email>
    </developer>
    <developer>
      <id>elharo</id>
      <name>Elliotte Rusty Harold</name>
      <email>elharo@ibiblio.org</email>
      <url>https://www.elharo.com/</url>
      <organization>Cafe au Lait</organization>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Ryan Gustafson</name>
      <email>rgustav@users.sourceforge.net</email>
    </contributor>
    <contributor>
      <name>David Peterson</name>
      <email>david@randombits.org</email>
    </contributor>
    <contributor>
      <name>Mark Wilson</name>
      <email>mark.wilson@wilsoncom.de</email>
    </contributor>
    <contributor>
      <name>Jacob Kjome</name>
      <email>hoju@visi.com</email>
    </contributor>
    <contributor>
      <name>Michael Brennan</name>
      <email>mpbrennan@earthlink.net</email>
    </contributor>
    <contributor>
      <name>Jason Hunter</name>
      <email>jhunter@xquery.com</email>
    </contributor>
    <contributor>
      <name>Brett Mclaughlin</name>
      <email>brett.mclaughlin@lutris.com</email>
    </contributor>
    <contributor>
      <name>Bradley S. Huffman</name>
      <email>hip@cs.okstate.edu</email>
    </contributor>
    <contributor>
      <name>K. Ari Krupnikov</name>
      <email>ari@lib.aero</email>
    </contributor>
    <contributor>
      <name>Paul R. Brown</name>
      <email>prb@fivesight.com</email>
    </contributor>
    <contributor>
      <name>Guoliang Cao</name>
      <email>cao@ispsoft.com</email>
    </contributor>
    <contributor>
      <name>Jérôme Nègre</name>
      <email>jerome.negre@e-xmlmedia.fr</email>
    </contributor>
    <contributor>
      <name>Eddie McGreal</name>
      <email>emcgreal@BlackPearl.com</email>
    </contributor>
    <contributor>
      <name>Steen Lehmann</name>
      <email>slehmann@users.sourceforge.net</email>
    </contributor>
    <contributor>
      <name>Ben McCann</name>
      <email>benjamin.j.mccann@gmail.com</email>
    </contributor>
    <contributor>
      <name>Don Corley</name>
      <email>don@donandann.com</email>
    </contributor>
  </contributors>

  <scm>
    <url>https://github.com/jaxen-xpath/jaxen</url>
    <connection>scm:git:git://github.com/jaxen-xpath/jaxen.git</connection>
    <developerConnection>scm:git:git@github.com:jaxen-xpath/jaxen.git</developerConnection>
  </scm>

  <organization>
    <name>The Jaxen Project</name>
    <url>https://www.cafeconleche.org/jaxen</url>
  </organization>


  <build>
    <sourceDirectory>src/java/main</sourceDirectory>
    <testSourceDirectory>src/java/test</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <debug>true</debug>
          <optimize>true</optimize>
          <showDeprecation>true</showDeprecation>
          <source>1.5</source>
          <target>1.5</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>${project.felix.version}</version>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
            <Bundle-Version>${project.version}</Bundle-Version>
            <Export-Package>org.jaxen.*;version=${project.version}</Export-Package>
          </instructions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <tarLongFileMode>posix</tarLongFileMode>
          <descriptorRefs>
            <descriptorRef>project</descriptorRef>
            <descriptorRef>src</descriptorRef>
            <descriptorRef>bin</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-repository-plugin</artifactId>
        <version>2.4</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.12.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${project.javadoc.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doclint>none</doclint>
          <quiet>true</quiet>
          <bottom>Copyright {inceptionYear}&#x2013;{currentYear} {organizationName}. All rights reserved.</bottom>
          <excludePackageNames>org.jaxen.saxpath.base,org.jaxen.saxpath.helpers,org.jaxen.pattern,org.jaxen.jdom,org.jaxen.xom,org.jaxen.dom4j</excludePackageNames>
          <links>
            <link>https://docs.oracle.com/javase/6/docs/api/</link>
          </links>
          <docencoding>UTF-8</docencoding>
          <tags>
            <tag>
              <head>To Do:</head>
              <name>todo</name>
              <placement>Xa</placement>
            </tag>
          </tags>
          <docencoding>UTF-8</docencoding>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <forkCount>3</forkCount>
          <reuseForks>true</reuseForks>
          <useSystemClassLoader>false</useSystemClassLoader>
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.5</version>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-changelog-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <type>date</type>
          <dates>
            <date>2007-05-06</date>
          </dates>
          <outputEncoding>UTF-8</outputEncoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${project.javadoc.version}</version>
        <configuration>
          <doclint>none</doclint>
          <bottom>Copyright {inceptionYear}&#x2013;{currentYear} {organizationName}. All rights reserved.</bottom>
          <excludePackageNames>org.jaxen.saxpath.base,org.jaxen.saxpath.helpers,org.jaxen.pattern,org.jaxen.jdom,org.jaxen.xom,org.jaxen.dom4j</excludePackageNames>
          <links>
            <link>https://docs.oracle.com/javase/6/docs/api/</link>
          </links>
          <docencoding>UTF-8</docencoding>
          <tags>
            <tag>
              <head>To Do:</head>
              <name>todo</name>
              <placement>Xa</placement>
            </tag>
          </tags>
          <docencoding>UTF-8</docencoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>3.3.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.19.0</version>
        <configuration>
          <sourceEncoding>utf-8</sourceEncoding>
          <targetJdk>1.5</targetJdk>
        </configuration>
      </plugin> 
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>2.22.1</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>dependencies</report>
              <report>scm</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.6</version>
            <extensions>true</extensions>
            <configuration>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <serverId>sonatype-nexus-staging</serverId>
              <autoReleaseAfterClose>false</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <site>
      <id>Cafe Con Leche</id>
      <url>scp://login.ibiblio.org/xml/jaxen/</url>
    </site>
  </distributionManagement>

</project>
